--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,10 +9,21 @@
   /* border: 2px solid yellow; */
 
 }
+.homed{
+  border-color: greenyellow;
+  background-image: url("./assets/2303.w018.n002.1746B.p15.1746.jpg");
+  background-size: cover;
+  background-position: center;
+  border: 2px solid rgb(59, 94, 6);
+  text-align: center;
+  height: 80vh;
+    
+}
 #home{
   /* border: 2px solid rgb(59, 94, 6); */
   height: 100vh;
   justify-content: center;
+  
   
 }
 
@@ -56,7 +67,7 @@
   height: 40px;
   gap: 80px;
   /* border: 1px solid red; */
-  color: rgb(255, 255, 255);
+
 
 }
 #logo-stf{
@@ -87,8 +98,7 @@
   padding: 10px;
   margin-top: 10px; 
   background-color: transparent;
-  color: white;
-  border: none;
+  color: #54585d;
   border-radius: 5px;
   cursor: pointer;
   margin-right: 25px;
@@ -97,7 +107,8 @@
 
 }
 #tck-btn:hover {
-  background-color: #8a999f;
+  background-color: #050505;
+  border-color: rgb(135, 107, 43);
   transform: scale(1.2); 
 }
 #srch-bar{
@@ -119,7 +130,7 @@
   height: 75vh;
   /* border: 1px solid #ccc; */
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   align-items: center;
   justify-content: center;
 }
@@ -150,7 +161,8 @@ button {
 }
 
 button:hover {
-  background-color: #54585d; 
+  /* background-color: #54585d; */
+  border-color: rgb(135, 107, 43); 
 }
 
 .signup-form button {
@@ -159,7 +171,7 @@ button:hover {
 }
 
 .signup-form button:hover {
-  background-color: #54585d; 
+  border-color: rgb(135, 107, 43); 
 }
 
 .signup-form-container {
