--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #54585d;
+  background-color: transparent;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #54585d;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #54585d;
 }
 
 body {
@@ -33,21 +33,26 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #54585d;
+  align-items: center;
+  justify-content: center;
+
 }
 
 button {
   border-radius: 8px;
+  color: #54585d;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgb(135, 107, 43);
 }
 button:focus,
 button:focus-visible {
