addent events page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
 }
 .homed{
   border-color: greenyellow;
-  background-image: url("./assets/2303.w018.n002.1746B.p15.1746.jpg");
+  background-image: url("./assets/podium fabric.jpg");
   background-size: cover;
   background-position: center;
   border: 2px solid rgb(59, 94, 6);
