--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,30 +3,48 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
   /* border: 2px solid yellow; */
 
 }
-.homed{
+#home{
   border-color: greenyellow;
   background-image: url("./assets/podium fabric.jpg");
   background-size: cover;
   background-position: center;
   border: 2px solid rgb(59, 94, 6);
-  text-align: center;
-  height: 80vh;
+  height: 98vh;
     
 }
-#home{
-  /* border: 2px solid rgb(59, 94, 6); */
-  height: 100vh;
+.homed{
+  border: 2px solid rgb(59, 94, 6);
+  height: 76vh;
+  display: flex;
+  flex-direction: row; 
+  text-align: center; 
   justify-content: center;
+  align-items: center;
   
   
 }
-
+#hom{
+  border: 1px solid rgb(135, 107, 43);
+  justify-content: center;
+  width: 600px;
+  margin-right: 20px;
+  height: 50vh;
+}
+#check-btn{
+  width: 150px;
+  bottom: 10px;
+  border: 1px solid rgb(135, 107, 43);
+}
+#check-btn:hover {
+  background-color: black;
+  transform: (0.2);
+}
 #nav{
   width: 100%;
   margin: 0;
@@ -248,28 +266,51 @@ button:hover {
   justify-content: space-evenly;
   padding: 20px;
 } */
-#hom{
-  border: rgb(135, 107, 43);
-}
+
 .footer-content{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 15px;
   align-items: center;
+  height: 100%;
   
 
 }
-footer{
-  border: 1px solid rgb(135, 107, 43);
+.footer{
+  /* border: 1px solid rgb(135, 107, 43); */
   position: fixed;
   bottom: 0;
   left:0;
   width: 100%;
-  height: 90px;
+  height: 30px;
   background-color: transparent;
 }
-.copyrigh{
+.copyright{
   text-align: center;
   margin: auto;
+  font-size: 10px;
+}
+.social{
+  /* border:1px solid #ccc; */
+  width: 10%;
+  text-align: center;
+  font-size: 12px;
+
+}
+.contact-info{
+   /* border:1px solid #ccc; */
+   width: 10%;
+   text-align: center;
+   font-size: 8px;
+   display: flex;
+   flex-direction: column;
+  
+}
+.social-media{
+  /* border: 1px solid #ccc; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2px;
+  color: rgb(135, 107, 43);
 }
