--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,15 +3,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  height: 100vh;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* border: 2px solid yellow; */
 
 }
 #home{
   /* border-color: greenyellow; */
-  background-image: url("./assets/podium fabric.jpg");
+  /* background-image: url("./assets/podium fabric.jpg"); */
   background-size: cover;
   background-position: center;
   /* border: 2px solid rgb(59, 94, 6); */
