--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
-#root{
-  background-color: #011C3B;
+#root {
+  background-color: #011c3b;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -7,36 +7,32 @@
   width: 100%;
   overflow: hidden;
   /* border: 2px solid yellow; */
-
 }
-#home{
+#home {
   /* border-color: greenyellow; */
   background-image: url("./assets/podium fabric.jpg");
   background-size: cover;
   background-position: center;
   /* border: 2px solid rgb(59, 94, 6); */
   height: 98vh;
-    
 }
-.homed{
+.homed {
   /* border: 2px solid rgb(59, 94, 6); */
   height: 76vh;
   display: flex;
-  flex-direction: row; 
-  text-align: center; 
+  flex-direction: row;
+  text-align: center;
   justify-content: center;
   align-items: center;
-  
-  
 }
-#hom{
+#hom {
   /* border: 1px solid rgb(135, 107, 43); */
   justify-content: center;
   width: 600px;
   margin-right: 20px;
   height: 50vh;
 }
-#check-btn{
+#check-btn {
   width: 150px;
   bottom: 10px;
   border: 1px solid rgb(135, 107, 43);
@@ -45,7 +41,7 @@
   background-color: black;
   transform: (0.2);
 }
-#nav{
+#nav {
   width: 100%;
   margin: 0;
   /* border: 2px solid purple; */
@@ -53,62 +49,58 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #011C3B;
+  background-color: #011c3b;
   align-items: center;
 }
-.carousel{
+.carousel {
   border-radius: 2%;
-  color:#54585d;
+  color: #54585d;
   border: 1px solid rgb(135, 107, 43);
   margin: auto;
-
 }
 
-.logo{
+.logo {
   font-size: 42px;
   font-family: helvetica;
   font-style: italic;
 }
 
-#log-list{
+#log-list {
   color: #54585d;
   font-size: 28px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: lighter;
 }
 
-#log-list:hover{
+#log-list:hover {
   font-size: 30px;
 }
 
-.nav-list{
+.nav-list {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: end;
+  /* justify-content: end; */
   font-size: 20px;
   margin: 5px;
   width: 450px;
   height: 40px;
   gap: 80px;
   /* border: 1px solid red; */
-
-
 }
-#logo-stf{
+#logo-stf {
   padding: 12px;
   margin: 10px;
   color: #8a999f;
-
 }
-#top-ln{
+#top-ln {
   font-size: 28px;
   margin-bottom: 0px;
 }
-#under-ln{
+#under-ln {
   font-size: 15px;
 }
-#cards{
+#cards {
   width: 100px;
   height: 30vh;
   padding: 10px;
@@ -119,9 +111,9 @@
   /* border: 2px solid black; */
 }
 
-#tck-btn{
+#tck-btn {
   padding: 10px;
-  margin-top: 10px; 
+  margin-top: 10px;
   background-color: transparent;
   color: #54585d;
   border-radius: 5px;
@@ -129,26 +121,24 @@
   margin-right: 25px;
   width: 70px;
   font-size: 9px;
-
 }
 #tck-btn:hover {
   background-color: #050505;
   border-color: rgb(135, 107, 43);
-  transform: scale(1.2); 
+  transform: scale(1.2);
 }
-#srch-bar{
+#srch-bar {
   width: 100px;
   background-color: transparent;
   padding: 10px;
   margin-top: 10px;
-
 }
-#srch-bar:hover{
+#srch-bar:hover {
   background-color: #050505;
   border-color: rgb(135, 107, 43);
   color: white;
 }
-#tck{
+#tck {
   color: rgb(135, 107, 43);
 }
 .log-container {
@@ -166,7 +156,6 @@
 label {
   display: block;
   margin-bottom: 15px;
-  
 }
 
 input {
@@ -178,7 +167,7 @@ input {
 
 button {
   padding: 10px;
-  margin-top: 10px; 
+  margin-top: 10px;
   background-color: transparent;
   color: white;
   border: none;
@@ -190,16 +179,16 @@ button {
 
 button:hover {
   /* background-color: #54585d; */
-  border-color: rgb(135, 107, 43); 
+  border-color: rgb(135, 107, 43);
 }
 
 .signup-form button {
-  margin-top: 10px; 
-  background-color: transparent; 
+  margin-top: 10px;
+  background-color: transparent;
 }
 
 .signup-form button:hover {
-  border-color: rgb(135, 107, 43); 
+  border-color: rgb(135, 107, 43);
 }
 
 .signup-form-container {
@@ -217,39 +206,35 @@ button:hover {
   display: flex;
   flex-direction: column;
 }
-.events{
+.events {
   display: flex;
   flex-direction: column;
 }
-.tiles{
+.tiles {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: auto;
-
 }
-.card-event{
+.card-event {
   display: flex;
   flex-direction: row;
   /* border: 1px solid red; */
   gap: 40px;
-
 }
-.sidebar{
+.sidebar {
   background-color: rgb(230, 228, 228);
   padding: 20px;
   width: 400px;
   border: 2px solid rgb(135, 107, 43);
   text-align: center;
   cursor: pointer;
-
 }
-.eventCard{
+.eventCard {
   display: flex;
   flex-wrap: wrap;
   width: calc(100% - 400px);
   border: 1px solid rgb(135, 107, 43);
-
 }
 .profile {
   margin: 12px;
@@ -263,11 +248,11 @@ button:hover {
   transition: transform 0.2s;
 }
 
-.profile img{
+.profile img {
   max-width: 100%;
   height: 30vh;
 }
-.profile:hover{
+.profile:hover {
   transform: scale(1.05);
 }
 /* .iconitis{
@@ -277,46 +262,42 @@ button:hover {
   padding: 20px;
 } */
 
-.footer-content{
+.footer-content {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   height: 100%;
   border-top: 2px solid rgb(135, 107, 43);
-  
-
 }
-.footer{
+.footer {
   position: fixed;
   bottom: 0;
-  left:0;
+  left: 0;
   width: 100%;
   height: 30px;
   background-color: transparent;
 }
-.copyright{
+.copyright {
   text-align: center;
   margin: auto;
   font-size: 10px;
 }
-.social{
+.social {
   /* border:1px solid #ccc; */
   width: 10%;
   text-align: center;
   font-size: 12px;
-
 }
-.contact-info{
-   /* border:1px solid #ccc; */
-   width: 10%;
-   text-align: center;
-   font-size: 8px;
-   display: flex;
-   flex-direction: column;
-  
+.contact-info {
+  /* border:1px solid #ccc; */
+  width: 10%;
+  text-align: center;
+  font-size: 8px;
+  display: flex;
+  flex-direction: column;
 }
-.social-media{
+.social-media {
   /* border: 1px solid #ccc; */
   display: flex;
   flex-direction: row;
@@ -324,14 +305,14 @@ button:hover {
   padding: 2px;
   color: rgb(135, 107, 43);
 }
-.event-details{
+.event-details {
   border: 1px solid rgb(135, 107, 43);
   margin: auto;
   width: 60%;
   padding: 5px;
   text-align: center;
   height: auto;
-  opacity: 3;
+  background: rgb(0, 0, 0, 0.8);
 }
 .table-container {
   width: 100%;
@@ -355,15 +336,15 @@ button:hover {
 
 .pricing-table td:first-child,
 .pricing-table th:first-child {
-  width: 40%; 
+  width: 40%;
 }
 
 .pricing-table td:nth-child(2),
 .pricing-table th:nth-child(2) {
-  width: 30%; 
+  width: 30%;
 }
 
 .pricing-table td:nth-child(3),
 .pricing-table th:nth-child(3) {
-  width: 30%; 
+  width: 30%;
 }
