feat: POST review

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 }
 #home{
   /* border-color: greenyellow; */
-  /* background-image: url("./assets/podium fabric.jpg"); */
+  background-image: url("./assets/podium fabric.jpg");
   background-size: cover;
   background-position: center;
   /* border: 2px solid rgb(59, 94, 6); */
