--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@
   justify-content: center;
   width: 600px;
   margin-right: 20px;
-  height: 50vh;
+  height: 60vh;
 }
 #check-btn{
   width: 150px;
@@ -60,10 +60,11 @@
   color:#54585d;
   border: 1px solid rgb(135, 107, 43);
   margin: auto;
+  text-align: center;
 
 }
 #carous{
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -223,6 +224,7 @@ button:hover {
 .events{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .tiles{
   display: flex;
@@ -233,9 +235,8 @@ button:hover {
 }
 .card-event{
   display: flex;
-  flex-direction: row;
-  /* border: 1px solid red; */
-  gap: 40px;
+  margin-top: 20px;
+ 
 
 }
 .sidebar{
@@ -252,33 +253,25 @@ button:hover {
   flex-wrap: wrap;
   width: calc(100% - 400px);
   border: 1px solid rgb(135, 107, 43);
+  justify-content: center;
 
 }
 .profile {
-  margin: 12px;
-  padding: 20px;
-  width: 450px;
-  height: 60vh;
-  text-align: center;
+  margin: 10px;
+  width: 250px;
   border-radius: 10px;
   background-color: rgb(230, 228, 228);
   box-shadow: 0 4px 6px rgb(135, 107, 43);
-  transition: transform 0.2s;
 }
-
-.profile img{
-  max-width: 100%;
-  height: 30vh;
+.eventImage{
+  width: 100%;
+  height: 35vh;
 }
-.profile:hover{
-  transform: scale(1.05);
+.eventInfo {
+  flex: 1;
+  padding: 10px;
+  background-color: #f9f9f9;
 }
-/* .iconitis{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding: 20px;
-} */
 
 .footer-content{
   display: flex;
@@ -352,7 +345,7 @@ button:hover {
   margin-right: 20px;
 }
 .event-image img{
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 .table-container {
