--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
   /* border: 2px solid yellow; */
 }
 #home {
@@ -365,4 +365,27 @@ button:hover {
 .pricing-table td:nth-child(3),
 .pricing-table th:nth-child(3) {
   width: 30%;
+}
+.dashboard-container{
+  border: 1px solid rgb(135, 107, 43);
+  height: 80vh;
+  background-color: rgba(114, 114, 114, 0.8);
+}
+.sales-card{
+  border: 1px solid rgb(151, 3, 82);
+  height: 5vh;
+  text-align: center;
+}
+.middle-container{
+  border: 1px solid rgb(217, 25, 11);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 75vh;
+}
+.numbers-place{
+  border: 1px solid rgb(16, 19, 175)
+}
+.random-box{
+  border: 1px solid rgb(35, 148, 56)
 }
