--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,15 +10,14 @@
   background-color: #011c3b;
 }
 #home {
-  
-  background-image: url("./assets/podium fabric.jpg");
-  background-size: cover;
-  background-position: center;
   /* border: 2px solid rgb(59, 94, 6); */
   height: 100vh;
 }
 .homed {
   /* border: 2px solid rgb(59, 94, 6); */
+  background-image: url("./assets/podium fabric.jpg");
+  background-size: cover;
+  background-position: center;
   height: 76vh;
   display: flex;
   flex-direction: row;
@@ -219,10 +218,21 @@ button:hover {
   display: flex;
   flex-direction: column;
 }
-.events {
+.events { 
+  background-image: url("./assets/footer_bg.jpg");
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: auto;
+}
+.event-bgd{
+  background-image: url("./assets/footer_bg.jpg");
+  background-size: cover;
+  background-position: center;
+  border: 1px solid yellow;
+
 }
 .tiles {
   display: flex;
@@ -446,4 +456,24 @@ button:hover {
   text-align: center;
   font-size: 24px;
   color: rgb(135, 107, 43);
+}
+.pageFooter{
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: space-evenly;
+  height: auto;
+}
+#pagination{
+  font-size: 13px;
+  padding: 20px;
+  margin-top: 10px;
+}
+#pagination h3{
+  text-align: center;
+  margin-bottom: 10px;
+}
+#pagination span{
+  font-size: 12px;
+  color: red;
 }
