--- a/client/src/App.css
+++ b/client/src/App.css
@@ -231,7 +231,8 @@ button:hover {
   background-image: url("./assets/footer_bg.jpg");
   background-size: cover;
   background-position: center;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
+  height: 70vh;
 
 }
 .tiles {
@@ -395,7 +396,7 @@ button:hover {
   padding: 20px;
   position: fixed;
   height: 70vh;
-  overflow-y: auto; /* Enable scrolling if content exceeds height */
+  overflow-y: auto;
 }
 
 .sidebar h2 {
@@ -477,3 +478,49 @@ button:hover {
   font-size: 12px;
   color: red;
 }
+.dashboard {
+  display: flex;
+}
+
+.sidebar {
+  background-color: transparent;
+  color: #fff;
+  padding: 20px;
+}
+
+.sidebar h2 {
+  margin-bottom: 20px;
+}
+
+.dropdown li {
+  list-style: none;
+}
+
+.dropdown a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+.dropdown ul {
+  display: none;
+  padding-left: 20px;
+}
+
+.dropdown ul.active {
+  display: block;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+.billing-details{
+  margin: auto;
+  border: 1px solid yellow;
+  text-align: center;
+  height: 80vh;
+}
+
