--- a/client/src/App.css
+++ b/client/src/App.css
@@ -148,7 +148,7 @@
 #tck {
   color: rgb(135, 107, 43);
 }
-/* .log-container {
+.log-container {
   max-width: 60%;
   margin: auto;
   padding: 50px;
@@ -161,21 +161,21 @@
   background-color: rgba(255, 255, 255, 0.6);
   color: #ddd;
   font-size: 25px;
-} */
+}
 
-/* label {
+label {
   display: block;
   margin-bottom: 15px;
-} */
+}
 
-/* input {
+input {
   width: 98%;
   padding: 12px;
   margin-bottom: 10px;
   border-radius: 8px;
-} */
+}
 
-/* button {
+button {
   padding: 10px;
   margin-top: 10px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -185,23 +185,23 @@
   cursor: pointer;
   margin-right: 25px;
   border-color: rgb(135, 107, 43);
-} */
+}
 
-/* button:hover {
+button:hover {
   background-color: #54585d;
   border-color: rgb(135, 107, 43);
-} */
+}
 
-/* .signup-form button {
+.signup-form button {
   margin-top: 10px;
   background-color: transparent;
-} */
+}
 
-/* .signup-form button:hover {
+.signup-form button:hover {
   border-color: rgb(135, 107, 43);
-} */
+}
 
-/* .signup-form-container {
+.signup-form-container {
   max-width: 65%;
   font-size: 20px;
   margin: auto;
@@ -212,9 +212,9 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.6);
   font-size: 25px;
-} */
+}
 
-/* .signup-form {
+.signup-form {
   display: flex;
   flex-direction: column;
 }
@@ -227,15 +227,14 @@
   align-items: center;
   height: auto;
 }
-.event-bgd{
+ .event-bgd{
   background-image: url("./assets/footer_bg.jpg");
   background-size: cover;
   background-position: center;
-  /* border: 1px solid yellow; */
+  border: 1px solid yellow;
   height: 70vh;
-
 }
-.tiles {
+  .tiles {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -494,6 +493,7 @@
 
 .dropdown li {
   list-style: none;
+  background-color: #011c3b;
 }
 
 .dropdown a {
