--- a/client/src/App.css
+++ b/client/src/App.css
@@ -192,6 +192,31 @@ button:hover {
   border-color: rgb(135, 107, 43);
 }
 
+.total-buy{
+  display: flex;
+  /* border: 1px solid #000000; */
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
+}
+.comments{
+  align-items: left;
+  border-top: 2px solid #000000;
+  font-size: 12px;
+  display: flex;
+  padding: 10px;
+}
+.rev-section{
+  align-items: left;
+  text-align: left;
+  font-size: 12px;
+  width: 700px;
+}
+.tag-section{
+  align-items: left;
+  font-size: 12px;
+  width: 300px;
+}
 .signup-form button {
   margin-top: 10px;
   background-color: transparent;
@@ -231,8 +256,8 @@ button:hover {
   background-image: url("./assets/footer_bg.jpg");
   background-size: cover;
   background-position: center;
-  border: 1px solid yellow;
-  height: 70vh;
+  /* border: 1px solid yellow; */
+  height: 90vh;
 }
   .tiles {
   display: flex;
