fix: UI fixed looking good

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: #54585d;
-  background-color: #011c3b;
+  background-color: #f5f5f5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
