--- a/client/src/components/DashBoards/Dashboard.css
+++ b/client/src/components/DashBoards/Dashboard.css
@@ -1,69 +1,23 @@
-:root{
-    --yellow: linear-gradient(180deg, #F8D49A -146.42%, #FAS79D -46 );
-    --orange: #fca61f;
-    --black: #242d49;
-    --grey: #788097;
-    --purple:linear-gradient(180deg, #BB67FF 0%, #C484F3 100%);
-    --pink:#FF919D;
-    --glass: rgba(255,255,255,0.54);
-    --box-shadow:0px 19px 60px rgb(0 0 0 / 8%);
-    --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
-    --activeItem: #f799a354;
+.dash_container{
+    position: relative;
+    margin-top: 7%;
 }
 
-
-
-.dashboard {
-
-    background: linear-gradient(
-        106.37deg,
-        #ffe1bc 29.63%,
-        #ffcfd1 51.55%,
-        #f3c6f1 90.85%
-    );
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    font-variation-settings:
-        "slnt" 0;
+.admin_sidebar{
+    color: white;
+    background-color: rgba(30, 30, 30, 0.9);
+    float: left;
+    margin-left: 1%;
 }
 
-.dashboardGlass{
-    display: grid;
-    height: 97%;
-    width: 95%;
-    border-radius: 2rem;
-    background: var(--glass);
-    overflow: hidden;
-    grid-template-columns: 11rem auto 20rem;
+.admin_sidebar a{
+    transition: all 0.1s;
 }
 
-.leftdiv>div {
-    padding: 1rem;
-    background: var(--yellow);
-    box-shadow: var(--box-shadow);
+.admin_sidebar a:hover{
+    background-color: rgb(70, 120, 230);
 }
 
-.middlediv>div {
-    padding: 1rem;
-    background: var(--orange);
-    box-shadow: var(--box-shadow);
-}
-
-.middlediv > img {
-    height: 200px; /* Set the desired height */
-    width: 200px; /* Set the desired width */
-    object-fit: cover; /* Maintain aspect ratio while filling the content box */
-}
-
-
-.rightdiv {
-    padding: 1rem;
-    background: var(--pink);
-    box-shadow: var(--box-shadow);
+.admin_sidebar .active {
+    background-color: rgb(70, 120, 230);
 }
