--- a/client/src/SignUp.css
+++ b/client/src/SignUp.css
@@ -116,3 +116,10 @@ div.event-details{
 	backdrop-filter: blur(5px);
 	border-radius: 10px;
 }
+
+.form_container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	float: right;
+}
